ZCS-14120: Translation added for Hide user in GAL and Hide aliases in GAL label text.

--- a/WebRoot/messages/ZaMsg_da.properties
+++ b/WebRoot/messages/ZaMsg_da.properties
@@ -1161,7 +1161,8 @@ NAD_zimletStatus = Aktiveret:
 
 NAD_CanonicalFrom = Kanonisk adresse:
 CannonicalWarning = \u00c6ndringen af kanoniske adresser kan forstyrre e-mail-forsendelse og kalenderaftaler!
-LBL_zimbraHideInGal = Skjul i GAL:
+LBL_zimbraHideInGal = Skjul bruger i GAL:
+LBL_zimbraHideAliasesInGal = Skjul aliaser i GAL
 NAD_Domain = Dom\u00e6ne
 NAD_Aliases = Aliasser
 NAD_Add = Tilf\u00f8j
