--- a/WebRoot/messages/ZaMsg_de.properties
+++ b/WebRoot/messages/ZaMsg_de.properties
@@ -1170,7 +1170,8 @@ NAD_zimletStatus = Aktiviert:
 
 NAD_CanonicalFrom = Kanonische Adresse:
 CannonicalWarning = Nach dem \u00c4ndern der kanonischen Adresse funktionieren Mailrouting und Kalendertermine m\u00f6glicherweise nicht mehr!
-LBL_zimbraHideInGal = In GAL verbergen: 
+LBL_zimbraHideInGal = Benutzer in GAL ausblenden:
+LBL_zimbraHideAliasesInGal = Aliase in GAL ausblenden
 NAD_Domain = Domain
 NAD_Aliases = Aliasnamen
 NAD_Add = Hinzuf\u00fcgen
