--- a/WebRoot/messages/ZaMsg_en_AU.properties
+++ b/WebRoot/messages/ZaMsg_en_AU.properties
@@ -1178,7 +1178,8 @@ NAD_zimletStatus = Enabled:
 
 NAD_CanonicalFrom = Canonical address:
 CannonicalWarning = Modifying canonical address may break mail routing and calendar appointments!
-LBL_zimbraHideInGal = Hide in GAL:
+LBL_zimbraHideInGal = Hide user in GAL:
+LBL_zimbraHideAliasesInGal = Hide aliases in GAL
 NAD_Domain = Domain
 NAD_Aliases = Aliases
 NAD_Add = Add
