--- a/WebRoot/messages/ZaMsg_es.properties
+++ b/WebRoot/messages/ZaMsg_es.properties
@@ -1174,7 +1174,8 @@ NAD_zimletStatus = Activado:
 
 NAD_CanonicalFrom = Direcci\u00f3n can\u00f3nica:
 CannonicalWarning = Modificar la direcci\u00f3n can\u00f3nica puede romper la ruta del correo electr\u00f3nico y las citas de la agenda.
-LBL_zimbraHideInGal = Ocultar en GAL: 
+LBL_zimbraHideInGal = Ocultar usuario en GAL:
+LBL_zimbraHideAliasesInGal = Ocultar alias en GAL
 NAD_Domain = Dominio
 NAD_Aliases = Alias
 NAD_Add = A\u00f1adir
