--- a/WebRoot/messages/ZaMsg_eu.properties
+++ b/WebRoot/messages/ZaMsg_eu.properties
@@ -1183,7 +1183,8 @@ NAD_zimletStatus = Aktibatua:
 
 NAD_CanonicalFrom = Helbide kanonikoa:
 CannonicalWarning = Helbide kanonikoa aldatzea posta elektronikoaren ibilbidea eta agendaren zitak puska ditzake.
-LBL_zimbraHideInGal = Ezkutatu HZOn
+LBL_zimbraHideInGal = Ezkutatu erabiltzailea GALen:
+LBL_zimbraHideAliasesInGal = Ezezagunak GALen ezkutatu
 NAD_Domain = Domeinua
 NAD_Aliases = Ezizenak
 NAD_Add = Gehitu
