--- a/WebRoot/messages/ZaMsg_fr_CA.properties
+++ b/WebRoot/messages/ZaMsg_fr_CA.properties
@@ -1188,7 +1188,8 @@ NAD_zimletStatus = Activ\u00e9 :
 
 NAD_CanonicalFrom = Adresse canonique\u00a0:
 CannonicalWarning = La modification d\u2019adresse canonique peut entraver le bon fonctionnement du routage de la messagerie et des rendez-vous du calendrier!
-LBL_zimbraHideInGal = Masquer dans la LAG :
+LBL_zimbraHideInGal = Masquer l\u2019utilisateur dans GAL :
+LBL_zimbraHideAliasesInGal = Masquer les alias dans GAL
 NAD_Domain = Domaine
 NAD_Aliases = Alias
 NAD_Add = Ajouter
