--- a/WebRoot/messages/ZaMsg_hr.properties
+++ b/WebRoot/messages/ZaMsg_hr.properties
@@ -1193,7 +1193,8 @@ NAD_zimletStatus = Enabled:
 
 NAD_CanonicalFrom = Canonical address:
 CannonicalWarning = Modifying canonical address may break mail routing and calendar appointments!
-LBL_zimbraHideInGal = Hide in GAL:
+LBL_zimbraHideInGal = Sakrij korisnika u GAL\u002du\u003a
+LBL_zimbraHideAliasesInGal = Sakrij aliasi u GAL\u002du
 NAD_Domain = Domain
 NAD_Aliases = Aliases
 NAD_Add = Add
