--- a/WebRoot/messages/ZaMsg_hu.properties
+++ b/WebRoot/messages/ZaMsg_hu.properties
@@ -1188,7 +1188,8 @@ NAD_zimletStatus = Enged\u00e9lyezve:
 
 NAD_CanonicalFrom = Kanonikus c\u00edm:
 CannonicalWarning = A kanonikus c\u00edm m\u00f3dos\u00edt\u00e1sa a lev\u00e9lir\u00e1ny\u00edt\u00e1s \u00e9s a napt\u00e1ri tal\u00e1lkoz\u00f3k meghib\u00e1sod\u00e1s\u00e1hoz vezethet.
-LBL_zimbraHideInGal = Elrejt\u00e9s a glob\u00e1lis c\u00edmlist\u00e1ban: 
+LBL_zimbraHideInGal = Felhaszn\u00e1l\u00f3 elrejt\u00e9se a GAL\u002dban:
+LBL_zimbraHideAliasesInGal = \u00c1lnevek elrejt\u00e9se a GAL\u002dban
 NAD_Domain = Tartom\u00e1ny
 NAD_Aliases = Aliasok
 NAD_Add = Hozz\u00e1ad\u00e1s
