--- a/WebRoot/messages/ZaMsg_in.properties
+++ b/WebRoot/messages/ZaMsg_in.properties
@@ -1190,7 +1190,8 @@ NAD_zimletStatus = Diaktifkan:
 
 NAD_CanonicalFrom = Alamat resmi:
 CannonicalWarning = Mengubah alamat resmi dapat merusak perutean email dan janji temu kalender!
-LBL_zimbraHideInGal = Sembunyikan dalam GAL:
+LBL_zimbraHideInGal = Sembunyikan pengguna di GAL:
+LBL_zimbraHideAliasesInGal = Sembunyikan alias di GAL
 NAD_Domain = Domain
 NAD_Aliases = Alias
 NAD_Add = Tambah
