--- a/WebRoot/messages/ZaMsg_it.properties
+++ b/WebRoot/messages/ZaMsg_it.properties
@@ -1161,7 +1161,8 @@ NAD_zimletStatus = Attivato:
 
 NAD_CanonicalFrom = Indirizzo canonico:
 CannonicalWarning = La modifica dell\u2019indirizzo canonico pu\u00f2 interrompere l\u2019instradamento mail e causare la perdita degli appuntamenti in Agenda!
-LBL_zimbraHideInGal = Nascondi in GAL:
+LBL_zimbraHideInGal = Nascondi utente nell\u2019elenco indirizzi globale:
+LBL_zimbraHideAliasesInGal = Nascondi gli alias in GAL
 NAD_Domain = Dominio
 NAD_Aliases = Alias
 NAD_Add = Aggiungi
