--- a/WebRoot/messages/ZaMsg_ja.properties
+++ b/WebRoot/messages/ZaMsg_ja.properties
@@ -1170,7 +1170,8 @@ NAD_zimletStatus = \u6709\u52b9\uff1a
 
 NAD_CanonicalFrom = \u30ab\u30ce\u30cb\u30ab\u30eb(\u6b63\u898f\u5316)\u30a2\u30c9\u30ec\u30b9\uff1a
 CannonicalWarning = \u30ab\u30ce\u30cb\u30ab\u30eb(\u6b63\u898f\u5316)\u30a2\u30c9\u30ec\u30b9\u3092\u5909\u66f4\u3059\u308b\u3068\u3001\u30e1\u30fc\u30eb\u306e\u30eb\u30fc\u30c8\u8a2d\u5b9a\u304a\u3088\u3073\u30ab\u30ec\u30f3\u30c0\u30fc\u4e88\u5b9a\u304c\u7834\u640d\u3059\u308b\u5834\u5408\u304c\u3042\u308a\u307e\u3059\u3002
-LBL_zimbraHideInGal = GAL\u306b\u8868\u793a\u3057\u306a\u3044\uff1a
+LBL_zimbraHideInGal = GAL\u3067\u30E6\u30FC\u30B6\u30FC\u3092\u975E\u8868\u793A\u306B\u3059\u308B\uff1a
+LBL_zimbraHideAliasesInGal = GAL\u3067\u30A8\u30A4\u30EA\u30A2\u30B9\u3092\u975E\u8868\u793A\u306B\u3059\u308B
 NAD_Domain = \u30c9\u30e1\u30a4\u30f3
 NAD_Aliases = \u30a8\u30a4\u30ea\u30a2\u30b9
 NAD_Add = \u8ffd\u52a0
