--- a/WebRoot/messages/ZaMsg_ko.properties
+++ b/WebRoot/messages/ZaMsg_ko.properties
@@ -1169,7 +1169,8 @@ NAD_zimletStatus = \uc0ac\uc6a9:
 
 NAD_CanonicalFrom = \uc815\uc2dd \uc8fc\uc18c:
 CannonicalWarning = \uc815\uc2dd \uc8fc\uc18c\ub97c \uc218\uc815\ud558\uba74 \uba54\uc77c \ub77c\uc6b0\ud305\uacfc \uc77c\uc815 \uc57d\uc18d\uc774 \uc190\uc0c1\ub420 \uc218 \uc788\uc2b5\ub2c8\ub2e4.
-LBL_zimbraHideInGal = GAL\uc5d0\uc11c \uc228\uae30\uae30: 
+LBL_zimbraHideInGal = GAL\uC5D0\uC11C \uC0AC\uC6A9\uC790 \uC228\uAE30\uAE30:
+LBL_zimbraHideAliasesInGal = GAL\uC5D0\uC11C \uBCC4\uCE6D \uC228\uAE30\uAE30
 NAD_Domain = \ub3c4\uba54\uc778
 NAD_Aliases = \ubcc4\uce6d
 NAD_Add = \ucd94\uac00
