--- a/WebRoot/messages/ZaMsg_ms.properties
+++ b/WebRoot/messages/ZaMsg_ms.properties
@@ -1188,7 +1188,8 @@ NAD_zimletStatus = Didayakan:
 
 NAD_CanonicalFrom = Alamat kanonik:
 CannonicalWarning = Mengubah suai alamat kanonik boleh memutuskan penghalaan mel dan janji temu kalendar!
-LBL_zimbraHideInGal = Sembunyikan dalam GAL: 
+LBL_zimbraHideInGal = Sembunyikan pengguna dalam GAL:
+LBL_zimbraHideAliasesInGal = Sembunyikan alias dalam GAL
 NAD_Domain = Domain
 NAD_Aliases = Alias
 NAD_Add = Tambah
