--- a/WebRoot/messages/ZaMsg_nl.properties
+++ b/WebRoot/messages/ZaMsg_nl.properties
@@ -1161,7 +1161,8 @@ NAD_zimletStatus = Ingeschakeld:
 
 NAD_CanonicalFrom = Canoniek adres:
 CannonicalWarning = Een wijziging van het canoniek adres kan de mailrouting en agenda-afspraken verbreken!
-LBL_zimbraHideInGal = Verbergen in Alg. adreslijst:
+LBL_zimbraHideInGal = Gebruiker in GAL verbergen:
+LBL_zimbraHideAliasesInGal = Verberg aliassen in GAL
 NAD_Domain = Domein
 NAD_Aliases = Aliassen
 NAD_Add = Toevoegen
