--- a/WebRoot/messages/ZaMsg_no.properties
+++ b/WebRoot/messages/ZaMsg_no.properties
@@ -1191,7 +1191,8 @@ NAD_zimletStatus = Aktivert:
 
 NAD_CanonicalFrom = Kanonisk adresse:
 CannonicalWarning = Endring av kanonisk adresse kan bryte e-postruting og kalenderavtaler.
-LBL_zimbraHideInGal = Skjul i GAL:
+LBL_zimbraHideInGal = Skjul bruker i GAL:
+LBL_zimbraHideAliasesInGal = Skjul aliaser i GAL
 NAD_Domain = Domene
 NAD_Aliases = Aliaser
 NAD_Add = Legg til
