--- a/WebRoot/messages/ZaMsg_pl.properties
+++ b/WebRoot/messages/ZaMsg_pl.properties
@@ -1181,7 +1181,8 @@ NAD_zimletStatus = W\u0142\u0105czone:
 
 NAD_CanonicalFrom = Adres kanoniczny:
 CannonicalWarning = Modyfikacja adresu kanonicznego mo\u017ce zak\u0142\u00f3ci\u0107 obieg wiadomo\u015bci i wydarze\u0144 w kalendarzu!
-LBL_zimbraHideInGal = Ukryj w GLA: 
+LBL_zimbraHideInGal = Ukryj u\u017cytkownika w GAL:
+LBL_zimbraHideAliasesInGal = Ukryj aliasy w GAL
 NAD_Domain = Domena
 NAD_Aliases = Aliasy
 NAD_Add = Dodaj
