--- a/WebRoot/messages/ZaMsg_pt.properties
+++ b/WebRoot/messages/ZaMsg_pt.properties
@@ -1191,7 +1191,8 @@ NAD_zimletStatus = Ativado:
 
 NAD_CanonicalFrom = Endere\u00e7o can\u00f3nico:
 CannonicalWarning = A modifica\u00e7\u00e3o do endere\u00e7o can\u00f3nico poder\u00e1 interromper o encaminhamento de correio e os compromissos no calend\u00e1rio!
-LBL_zimbraHideInGal = Ocultar na GAL:
+LBL_zimbraHideInGal = Ocultar usu\u00e1rio na GAL:
+LBL_zimbraHideAliasesInGal = Ocultar aliases na GAL
 NAD_Domain = Dom\u00ednio
 NAD_Aliases = Nomes alternativos
 NAD_Add = Adicionar
