--- a/WebRoot/messages/ZaMsg_pt_BR.properties
+++ b/WebRoot/messages/ZaMsg_pt_BR.properties
@@ -1160,7 +1160,8 @@ NAD_zimletStatus = Ativada:
 
 NAD_CanonicalFrom = Endere\u00e7o can\u00f4nico:
 CannonicalWarning = Modificar o endere\u00e7o can\u00f4nico pode interromper o roteamento dos e-mails e os compromissos da agenda.
-LBL_zimbraHideInGal = Ocultar na Lista global de endere\u00e7os:
+LBL_zimbraHideInGal = Ocultar usu\u00e1rio na lista de endere\u00e7os global:
+LBL_zimbraHideAliasesInGal = Ocultar aliases na lista de endere\u00e7os global
 NAD_Domain = Dom\u00ednio
 NAD_Aliases = Nomes alternativos
 NAD_Add = Adicionar
