--- a/WebRoot/messages/ZaMsg_ro.properties
+++ b/WebRoot/messages/ZaMsg_ro.properties
@@ -1188,7 +1188,8 @@ NAD_zimletStatus = Activat:
 
 NAD_CanonicalFrom = Adres\u0103 canonic\u0103:
 CannonicalWarning = Modificarea adresei canonice poate \u00eentrerupe rutarea mesajelor \u015fi \u00eent\u00e2lnirile din calendar!
-LBL_zimbraHideInGal = Ascundere \u00een GAL: 
+LBL_zimbraHideInGal = Ascunde utilizatorul \u00een GAL:
+LBL_zimbraHideAliasesInGal = Ascunde aliasurile \u00een GAL
 NAD_Domain = Domeniu
 NAD_Aliases = Aliasuri
 NAD_Add = Ad\u0103ugare
