--- a/WebRoot/messages/ZaMsg_sl.properties
+++ b/WebRoot/messages/ZaMsg_sl.properties
@@ -1188,7 +1188,8 @@ NAD_zimletStatus = Omogo\u010deno:
 
 NAD_CanonicalFrom = Kanoni\u010den naslov:
 CannonicalWarning = Sprememba kanoni\u010dnega naslova lahko prekine usmerjanje po\u0161te in sestanke v koledarju!
-LBL_zimbraHideInGal = Skrij v GAL:
+LBL_zimbraHideInGal = Skrij uporabnika v GAL:
+LBL_zimbraHideAliasesInGal = Skrij vzdevke v GAL
 NAD_Domain = Domena
 NAD_Aliases = Vzdevki
 NAD_Add = Dodaj
