--- a/WebRoot/messages/ZaMsg_sv.properties
+++ b/WebRoot/messages/ZaMsg_sv.properties
@@ -1161,7 +1161,8 @@ NAD_zimletStatus = Aktiverad:
 
 NAD_CanonicalFrom = Kanonisk adress:
 CannonicalWarning = Om den kanoniska adressen \u00e4ndras kan e-postdirigering och kalenderbokningar f\u00f6rloras!
-LBL_zimbraHideInGal = D\u00f6lj i global adresslista:
+LBL_zimbraHideInGal = D\u00f6lj anv\u00e4ndare i GAL:
+LBL_zimbraHideAliasesInGal = D\u00f6lj alias i GAL
 NAD_Domain = Dom\u00e4n
 NAD_Aliases = Alias
 NAD_Add = L\u00e4gg till
