--- a/WebRoot/messages/ZaMsg_tr.properties
+++ b/WebRoot/messages/ZaMsg_tr.properties
@@ -1186,7 +1186,8 @@ NAD_zimletStatus = Etkinle\u015ftirildi:
 
 NAD_CanonicalFrom = Yasal adres:
 CannonicalWarning = Yasal adresin de\u011fi\u015ftirilmesi, posta y\u00f6nlendirme takvim randevular\u0131n\u0131 bozabilir!
-LBL_zimbraHideInGal = GAL i\u00e7inde gizle: 
+LBL_zimbraHideInGal = Kullan\u0131c\u0131y\u0131 GAL\u0027de gizle:
+LBL_zimbraHideAliasesInGal = GAL\u0027deki takma adlar\u0131 gizle
 NAD_Domain = Etki Alan\u0131
 NAD_Aliases = Takma Adlar
 NAD_Add = Ekle
