--- a/WebRoot/messages/ZaMsg_vi.properties
+++ b/WebRoot/messages/ZaMsg_vi.properties
@@ -1191,7 +1191,8 @@ NAD_zimletStatus = \u0110\u00e3 b\u1eadt:
 
 NAD_CanonicalFrom = \u0110\u1ecba ch\u1ec9 ch\u00ednh th\u1ee9c:
 CannonicalWarning = S\u1eeda \u0111\u1ecba ch\u1ec9 ch\u00ednh t\u1eafc c\u00f3 th\u1ec3 ph\u00e1 v\u1ee1 \u0111\u1ecbnh tuy\u1ebfn th\u01b0 v\u00e0 l\u1ecbch h\u1eb9n!
-LBL_zimbraHideInGal = \u1ea8n trong GAL:
+LBL_zimbraHideInGal = \u1ea8n ng\u01b0\u1eddi d\u00f9ng trong GAL:
+LBL_zimbraHideAliasesInGal = \u1ea8n b\u00ed danh trong GAL
 NAD_Domain = T\u00ean mi\u1ec1n
 NAD_Aliases = B\u00ed danh
 NAD_Add = Th\u00eam
