--- a/WebRoot/messages/ZaMsg_zh_CN.properties
+++ b/WebRoot/messages/ZaMsg_zh_CN.properties
@@ -1180,7 +1180,8 @@ NAD_zimletStatus = \u5df2\u542f\u7528\ufe55
 
 NAD_CanonicalFrom = \u89c4\u8303\u7684\u5730\u5740\uff1a
 CannonicalWarning = \u4fee\u6539\u89c4\u8303\u7684\u5730\u5740\u4f1a\u4e2d\u65ad\u90ae\u4ef6\u8def\u7531\u548c\u7ea6\u4f1a\u65e5\u7a0b\u5b89\u6392!
-LBL_zimbraHideInGal = \u5728 GAL \u4e2d\u9690\u85cf:
+LBL_zimbraHideInGal = \u5728 GAL \u4E2D\u9690\u85CF\u7528\u6237\uff1a
+LBL_zimbraHideAliasesInGal = \u9690\u85CF GAL \u4E2D\u7684\u522B\u540D
 NAD_Domain = \u57df\u540d
 NAD_Aliases = \u522b\u540d
 NAD_Add = \u6dfb\u52a0
