--- a/WebRoot/messages/ZaMsg_zh_HK.properties
+++ b/WebRoot/messages/ZaMsg_zh_HK.properties
@@ -1161,7 +1161,8 @@ NAD_zimletStatus = \u5df2\u555f\u7528\ufe55
 
 NAD_CanonicalFrom = \u898f\u7bc4\u7684\u5730\u5740\uff1a
 CannonicalWarning = \u4fee\u6539\u898f\u7bc4\u7684\u5730\u5740\u53ef\u80fd\u5c0e\u81f4\u90f5\u4ef6\u8def\u7531\u548c\u9810\u7d04\u65e5\u7a0b\u5b89\u6392\u4e0d\u53ef\u7528\uff01
-LBL_zimbraHideInGal = \u65bc GAL \u5167\u96b1\u85cf\uff1a
+LBL_zimbraHideInGal = \u5728 GAL \u4E2D\u96B1\u85CF\u7528\u6236\uff1a
+LBL_zimbraHideAliasesInGal = \u5728 \u4E2D\u96B1\u85CF\u7528\u6236\u96B1\u85CF GAL \u4E2D\u7684\u5225\u540D
 NAD_Domain = \u7db2\u57df
 NAD_Aliases = \u5225\u540d
 NAD_Add = \u52a0\u5165
