--- a/WebRoot/messages/ZaMsg_zh_TW.properties
+++ b/WebRoot/messages/ZaMsg_zh_TW.properties
@@ -1187,7 +1187,8 @@ NAD_zimletStatus = \u5df2\u555f\u7528:
 
 NAD_CanonicalFrom = \u6a19\u6e96\u5730\u5740:
 CannonicalWarning = \u4fee\u6539\u6a19\u6e96\u5730\u5740\u6703\u4e2d\u65b7\u90f5\u4ef6\u8def\u7531\u548c\u884c\u4e8b\u66c6\u7d04\u6703\u5b89\u6392!
-LBL_zimbraHideInGal = \u5728 GAL \u4e2d\u96b1\u85cf:
+LBL_zimbraHideInGal = \u5728 GAL \u4E2D\u96B1\u85CF\u7528\u6236:
+LBL_zimbraHideAliasesInGal = \u96B1\u85CF GAL \u4E2D\u7684\u5225\u540D
 NAD_Domain = \u7db2\u57df
 NAD_Aliases = \u5225\u540d
 NAD_Add = \u65b0\u589e
