--- a/WebRoot/messages/ZaMsg_ca.properties
+++ b/WebRoot/messages/ZaMsg_ca.properties
@@ -1187,7 +1187,8 @@ NAD_zimletStatus = Habilitat:
 
 NAD_CanonicalFrom = Adre\u00e7a can\u00f2nica:
 CannonicalWarning = Canviar l\u2019adre\u00e7a can\u00f2nica pot malmetre la ruta del correu i les cites de l\u2019agenda.
-LBL_zimbraHideInGal = Amaga a la llibreta global d\u2019adreces:
+LBL_zimbraHideInGal = Amaga l\u2019usuari a GAL:
+LBL_zimbraHideAliasesInGal = Amaga els \u00e0lies a GAL
 NAD_Domain = Domini
 NAD_Aliases = \u00c0lies
 NAD_Add = Afegeix
