--- a/WebRoot/messages/ZaMsg_fr.properties
+++ b/WebRoot/messages/ZaMsg_fr.properties
@@ -1177,7 +1177,8 @@ NAD_zimletStatus = Activ\u00e9(e)\u00a0:
 
 NAD_CanonicalFrom = Adresse canonique\u00a0:
 CannonicalWarning = La modification d\u2019adresse canonique peut entraver le bon fonctionnement du routage de la messagerie et des rendez-vous du calendrier\u00a0!
-LBL_zimbraHideInGal = Masquer dans la liste GAL\u00a0: 
+LBL_zimbraHideInGal = Masquer l\u2019utilisateur dans GAL : 
+LBL_zimbraHideAliasesInGal = Masquer les alias dans GAL
 NAD_Domain = Domaine
 NAD_Aliases = Alias
 NAD_Add = Ajouter
