--- a/WebRoot/messages/ZaMsg_iw.properties
+++ b/WebRoot/messages/ZaMsg_iw.properties
@@ -1188,7 +1188,8 @@ NAD_zimletStatus = \u05de\u05d5\u05e4\u05e2\u05dc:
 
 NAD_CanonicalFrom = \u05db\u05ea\u05d5\u05d1\u05ea \u05e7\u05e0\u05d5\u05e0\u05d9\u05ea:
 CannonicalWarning = \u05e9\u05d9\u05e0\u05d5\u05d9 \u05d4\u05db\u05ea\u05d5\u05d1\u05ea \u05d4\u05e7\u05e0\u05d5\u05e0\u05d9\u05ea \u05e2\u05dc\u05d5\u05dc \u05dc\u05d2\u05e8\u05d5\u05dd \u05dc\u05e0\u05ea\u05e7 \u05d1\u05e0\u05d9\u05ea\u05d5\u05d1 \u05d4\u05d3\u05d5\u05d0\u05e8 \u05d5\u05d1\u05e4\u05d2\u05d9\u05e9\u05d5\u05ea \u05dc\u05d5\u05d7 \u05d4\u05e9\u05e0\u05d4!
-LBL_zimbraHideInGal = \u05d4\u05e1\u05ea\u05e8 \u05d1\u05e8\u05e9\u05d9\u05de\u05ea \u05d4\u05db\u05ea\u05d5\u05d1\u05d5\u05ea \u05d4\u05d2\u05dc\u05d5\u05d1\u05dc\u05d9\u05ea:
+LBL_zimbraHideInGal = \u05d4\u05e1\u05ea\u05e8 \u05de\u05e9\u05ea\u05de\u05e9 \u05d1\u05e8\u05e9\u05d9\u05de\u05ea \u05d4\u05db\u05ea\u05d5\u05d1\u05d5\u05ea \u05d4\u05d2\u05dc\u05d5\u05d1\u05dc\u05d9\u05ea\u003a
+LBL_zimbraHideAliasesInGal = \u05d4\u05e1\u05ea\u05e8 \u05db\u05d9\u05e0\u05d5\u05d9\u05d9\u05dd \u05d1\u05e8\u05e9\u05d9\u05de\u05ea \u05d4\u05db\u05ea\u05d5\u05d1\u05d5\u05ea \u05d4\u05d2\u05dc\u05d5\u05d1\u05dc\u05d9\u05ea\u003a
 NAD_Domain = \u05ea\u05d7\u05d5\u05dd
 NAD_Aliases = \u05db\u05d9\u05e0\u05d5\u05d9\u05d9\u05dd
 NAD_Add = \u05d4\u05d5\u05e1\u05e3
