--- a/WebRoot/messages/ZaMsg_lo.properties
+++ b/WebRoot/messages/ZaMsg_lo.properties
@@ -1188,7 +1188,8 @@ NAD_zimletStatus = \u200b\u0ec0\u0e9b\u0eb5\u0e94\u200b\u0ec3\u0e8a\u0ec9\u200b\
 
 NAD_CanonicalFrom = \u0e97\u0eb5\u0ec8\u0ea2\u0eb9\u0ec8\u200b\u0e97\u0eb5\u0ec8\u200b\u0eae\u0eb1\u0e9a\u0eae\u0eb9\u0ec9:
 CannonicalWarning = \u0e81\u0eb2\u0e99\u200b\u200b\u0e9b\u0ec8\u0ebd\u0e99\u200b\u0e97\u0eb5\u0ec8\u0ea2\u0eb9\u0ec8\u200b\u0eae\u0eb1\u0e9a\u0eae\u0eb9\u0ec9 \u0ead\u0eb2\u0e94\u200b\u0ea1\u0eb5\u0e9c\u0ebb\u0e99\u0e81\u0eb0\u0e97\u0ebb\u0e9a\u0e95\u0ecd\u0ec8\u200b\u0ec0\u0eaa\u0eb1\u0ec9\u0e99\u0e97\u0eb2\u0e87\u200b\u0e82\u0ead\u0e87\u200b\u0e88\u0ebb\u0e94\u0edd\u0eb2\u0e8d \u200b\u0ec1\u0ea5\u0eb0\u200b\u0ec0\u0ea7\u0ea5\u0eb2\u200b\u0e99\u0eb1\u0e94\u200b\u0edd\u0eb2\u0e8d!
-LBL_zimbraHideInGal = \u200b\u0ec0\u0e8a\u0eb7\u0ec8\u0ead\u0e87\u200b\u0ea2\u0eb9\u0ec8\u200b\u0ec3\u0e99 GAL:
+LBL_zimbraHideInGal = \u0EC0\u0E8A\u0EB7\u0EC8\u0EAD\u0E87\u0E9C\u0EB9\u0EC9\u0EC3\u0E8A\u0EC9\u0EC3\u0E99 GAL:
+LBL_zimbraHideAliasesInGal = \u0EC0\u0E8A\u0EB7\u0EC8\u0EAD\u0E87\u0E99\u0EB2\u0EA1\u0EC1\u0E9D\u0E87\u0EC3\u0E99 GAL
 NAD_Domain = \u0ec2\u0e94\u0ec0\u0ea1\u0e99
 NAD_Aliases = \u0e8a\u0eb7\u0ec8\u0e88\u0eb3\u0ea5\u0ead\u0e87
 NAD_Add = \u0ec0\u0e9e\u0eb5\u0ec8\u0ea1
