--- a/WebRoot/messages/ZaMsg_ta.properties
+++ b/WebRoot/messages/ZaMsg_ta.properties
@@ -1191,7 +1191,8 @@ NAD_zimletStatus = \u0b87\u0baf\u0b95\u0bcd\u0b95\u0baa\u0bcd\u0baa\u0b9f\u0bcd\
 
 NAD_CanonicalFrom = \u0bb5\u0bbf\u0ba4\u0bbf\u0bae\u0bc1\u0bb1\u0bc8\u0b9a\u0bcd \u0b9a\u0bbe\u0bb0\u0bcd\u0ba8\u0bcd\u0ba4 \u0bae\u0bc1\u0b95\u0bb5\u0bb0\u0bbf:
 CannonicalWarning = \u0bb5\u0bbf\u0ba4\u0bbf\u0bae\u0bc1\u0bb1\u0bc8\u0b9a\u0bcd \u0b9a\u0bbe\u0bb0\u0bcd\u0ba8\u0bcd\u0ba4 \u0bae\u0bc1\u0b95\u0bb5\u0bb0\u0bbf\u0baf\u0bc8\u0ba4\u0bcd \u0ba4\u0bbf\u0bb0\u0bc1\u0ba4\u0bcd\u0ba4\u0bbf\u0ba9\u0bbe\u0bb2\u0bcd \u0b85\u0b9e\u0bcd\u0b9a\u0bb2\u0bcd \u0bae\u0bc2\u0bb2\u0bae\u0bcd \u0bae\u0bb1\u0bcd\u0bb1\u0bc1\u0bae\u0bcd \u0ba8\u0bbe\u0b9f\u0bcd\u0b95\u0bbe\u0b9f\u0bcd\u0b9f\u0bbf \u0b9a\u0ba8\u0bcd\u0ba4\u0bbf\u0baa\u0bcd\u0baa\u0bc1\u0b95\u0bb3\u0bc8\u0ba4\u0bcd \u0ba4\u0bc1\u0ba3\u0bcd\u0b9f\u0bbf\u0b95\u0bcd\u0b95\u0bc1\u0bae\u0bcd!
-LBL_zimbraHideInGal = GAL \u0b87\u0bb2\u0bcd \u0bae\u0bb1\u0bc8:
+LBL_zimbraHideInGal = GAL \u0B87\u0BB2\u0BCD \u0BAA\u0BAF\u0BA9\u0BB0\u0BC8 \u0BAE\u0BB1\u0BC8:
+LBL_zimbraHideAliasesInGal = GAL \u0B87\u0BB2\u0BCD \u0BAE\u0BBE\u0BB1\u0BCD\u0BB1\u0BC1\u0BAA\u0BCD\u0BAA\u0BC6\u0BAF\u0BB0\u0BCD\u0B95\u0BB3\u0BC8 \u0BAE\u0BB1\u0BC8
 NAD_Domain = \u0b9f\u0bca\u0bae\u0bc8\u0ba9\u0bcd
 NAD_Aliases = \u0bae\u0bbe\u0bb1\u0bcd\u0bb1\u0bc1\u0baa\u0bcd\u0baa\u0bc6\u0baf\u0bb0\u0bcd\u0b95\u0bb3\u0bcd
 NAD_Add = \u0b9a\u0bc7\u0bb0\u0bcd
