--- a/WebRoot/messages/ZaMsg_th.properties
+++ b/WebRoot/messages/ZaMsg_th.properties
@@ -1186,7 +1186,8 @@ NAD_zimletStatus = \u0e40\u0e1b\u0e34\u0e14\u0e43\u0e0a\u0e49\u0e07\u0e32\u0e19:
 
 NAD_CanonicalFrom = \u0e17\u0e35\u0e48\u0e2d\u0e22\u0e39\u0e48\u0e21\u0e32\u0e15\u0e23\u0e10\u0e32\u0e19:
 CannonicalWarning = \u0e01\u0e32\u0e23\u0e1b\u0e23\u0e31\u0e1a\u0e40\u0e1b\u0e25\u0e35\u0e48\u0e22\u0e19\u0e17\u0e35\u0e48\u0e2d\u0e22\u0e39\u0e48\u0e21\u0e32\u0e15\u0e23\u0e10\u0e32\u0e19\u0e2d\u0e32\u0e08\u0e2a\u0e23\u0e49\u0e32\u0e07\u0e04\u0e27\u0e32\u0e21\u0e40\u0e2a\u0e35\u0e22\u0e2b\u0e32\u0e22\u0e01\u0e31\u0e1a\u0e40\u0e2a\u0e49\u0e19\u0e17\u0e32\u0e07\u0e01\u0e32\u0e23\u0e2a\u0e48\u0e07\u0e08\u0e14\u0e2b\u0e21\u0e32\u0e22\u0e41\u0e25\u0e30\u0e1b\u0e0f\u0e34\u0e17\u0e34\u0e19\u0e01\u0e32\u0e23\u0e19\u0e31\u0e14\u0e2b\u0e21\u0e32\u0e22!
-LBL_zimbraHideInGal = \u0e0b\u0e48\u0e2d\u0e19\u0e43\u0e19 GAL: 
+LBL_zimbraHideInGal = \u0E0B\u0E48\u0E2D\u0E19\u0E1C\u0E39\u0E49\u0E43\u0E0A\u0E49\u0E43\u0E19 GAL:
+LBL_zimbraHideAliasesInGal = \u0E0B\u0E48\u0E2D\u0E19\u0E19\u0E32\u0E21\u0E41\u0E1D\u0E07\u0E43\u0E19 GAL
 NAD_Domain = \u0e42\u0e14\u0e40\u0e21\u0e19
 NAD_Aliases = \u0e19\u0e32\u0e21\u0e41\u0e1d\u0e07
 NAD_Add = \u0e40\u0e1e\u0e34\u0e48\u0e21
